-------------------------------------------------------------------------------
0.4.0Beta6  by The SABnzbd-Team
-------------------------------------------------------------------------------
changed: Remove group-based folders
changed: Remove newzbin-based folders (use user-defined categories instead)
chaged:  RSS feed user interface simplified.
fixed:   Handle password-protected archives better
fixed:   "newzbin category" option fails when no newzbin category
         is available for the job.
-------------------------------------------------------------------------------
0.4.0Beta5  by The SABnzbd-Team
-------------------------------------------------------------------------------
fixed:   Queue incompatibility between Beta2 and Beta4 was not detected
         causing problems.
         queue.sab and bytes.sab will now have a version identifier in their
         names. This prevents the newer release from refusing to work and will
         not require the user to erase the old queue. The old queue can even
         be used again by the older release.
         This release uses queue7.sab and bytes7.sab.
fixed:   Many TV Season support issues.
fixed:   Unix permissions for job folders now also covers parent folders.
fixed:   Bookmark function sometimes fails to delete completed bookmarks and
         sometimes repeats downloads
fixed:   Occasional hangup in shutdown (due to UrlGrabber)
fixed:   PP, category and script overrides used on the main page were ignored
fixed:   Prevent storing of full path in the GZ backup of the NZB
fixed:   Improvements and bug fixes in Smpl and Plush skins.
fixed:   Category "default" script was not handled properly.
         Please verify your category settings!
changed: Allow nzb-zips to contain nfos.
changed: Show failure of job in email subject line
added:   Sort-by-size button on the queue page
-------------------------------------------------------------------------------
0.4.0Beta4  by The SABnzbd-Team