@@ -107,12 +107,6 @@
     <input type="radio" name="enable_save" value="1" <!--#if $enable_save > 0 then "checked=1" else ""#--> /> Yes
     <br>
     <br>
-    <strong>Disconnect on empty queue:</strong><br>
-    Disconnect from Usenet server(s) when queue is empty.<br>
-    <input type="radio" name="auto_disconnect" value="0" <!--#if $auto_disconnect == 0 then "checked=1" else ""#--> /> No
-    <input type="radio" name="auto_disconnect" value="1" <!--#if $auto_disconnect > 0 then "checked=1" else ""#--> /> Yes
-    <br>
-    <br>
     <strong>Send Group</strong><br>
     Send group command before requesting articles.<br>
     <input type="radio" name="send_group" value="0" <!--#if $send_group == 0 then "checked=1" else ""#--> /> No
