@@ -82,12 +82,6 @@
 		    <span class="tips">Enabling will make the queue save it's state after every completed file.</span>
 		<br class="clear" />
 
-		    <label>Disconnect on empty queue:</label>
-		    <input class="radio" type="radio" name="auto_disconnect" value="0" <!--#if $auto_disconnect == 0 then "checked=1" else ""#--> /> No
-		    <input class="radio" type="radio" name="auto_disconnect" value="1" <!--#if $auto_disconnect > 0 then "checked=1" else ""#--> /> Yes
-		    <span class="tips">Disconnect from Usenet server(s) when queue is empty.</span>
-		<br class="clear" />
-
 		    <label>Send Group</label>
 		    <input class="radio" type="radio" name="send_group" value="0" <!--#if $send_group == 0 then "checked=1" else ""#--> /> No
 		    <input class="radio" type="radio" name="send_group" value="1" <!--#if $send_group > 0 then "checked=1" else ""#--> /> Yes
